# haskell_pyramid

./: README.md  spop.lkshs  spop.lkshw
main/: cabal.sandbox.config  main.cabal
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/doctest-0.11.0-8onqlrcIvx7I8cCoo1ZPfl/: Extract.dyn_hi  Extract.hi  GhcUtil.dyn_hi  GhcUtil.hi  Help.dyn_hi  Help.hi  Interpreter.dyn_hi  Interpreter.hi  Location.dyn_hi  Location.hi  PackageDBs.dyn_hi  PackageDBs.hi  Parse.dyn_hi  Parse.hi  Paths_doctest.dyn_hi  Paths_doctest.hi  Property.dyn_hi  Property.hi  Run.dyn_hi  Run.hi  Runner.dyn_hi  Runner.hi  Sandbox.dyn_hi  Sandbox.hi  Util.dyn_hi  Util.hi
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/doctest-0.11.0-8onqlrcIvx7I8cCoo1ZPfl/Language/Haskell/: GhciWrapper.dyn_hi  GhciWrapper.hi
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/doctest-0.11.0-8onqlrcIvx7I8cCoo1ZPfl/Runner/: Example.dyn_hi  Example.hi
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/doctest-0.11.0-8onqlrcIvx7I8cCoo1ZPfl/Test/: DocTest.dyn_hi  DocTest.hi
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/loop-0.3.0-1839SNCA0WGH7fKTWBST7w/Control/: Loop.dyn_hi  Loop.hi
main/.cabal-sandbox/lib/x86_64-linux-ghc-7.10.3/matrix-0.3.4.4-Jxrvt8ICBIE0SJN5OwWnKv/Data/: Matrix.dyn_hi  Matrix.hi
main/.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: doctest-0.11.0-f2de5e3c436bd40e7f55a07f2faf9851.conf  loop-0.3.0-e4cd365d415051336deae50e708754c4.conf  matrix-0.3.4.4-04fc1d7e98f47099050872ee3335d5e1.conf  package.cache
main/src/: Main.hs  PyramidPuzzle.hs
(+2 files in other folders)
